--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,20 +14,20 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   mobx: ^2.2.3
-  build_runner: ^2.4.6
   mobx_codegen: ^2.3.0
   flutter_modular: ^6.3.2
+  hive: ^2.2.3
+  build_runner: ^2.4.6
+  uuid: ^3.0.0
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
   
-
   flutter_lints: ^2.0.0
 
 
 flutter:
-
 
   uses-material-design: true
 
