--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,46 +2,41 @@ name: controle_de_estoque
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  faker: ^2.1.0
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  mobx: ^2.2.3
-  mobx_codegen: ^2.3.0
   flutter_modular: ^6.3.2
   hive: ^2.2.3
-  build_runner: ^2.4.6
-  faker: ^2.1.0
-  
+  mobx: ^2.2.3
+  mocktail: ^1.0.2
+
 dev_dependencies:
+  build_runner: ^2.4.6
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  
-  flutter_lints: ^2.0.0
-
+  mobx_codegen: ^2.3.0
 
 flutter:
-
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
